--- a/cpp_modules/cpp05/ex02/Makefile
+++ b/cpp_modules/cpp05/ex02/Makefile
@@ -3,7 +3,11 @@ NAME := a.out
 CXXFLAGS := -Wall -Werror -Wextra -std=c++98
 SRCS =	main.cpp\
 		Bureaucrat.cpp\
-		Form.cpp\
+		Aform.cpp\
+		PresidentialPardonForm.cpp\
+		RobotomyRequestForm.cpp\
+		ShrubberyCreationForm.cpp\
+		
 		
 OBJS = $(SRCS:.cpp=.o)
 
