--- a/cpp_modules/cpp08/ex01/Makefile
+++ b/cpp_modules/cpp08/ex01/Makefile
@@ -1,8 +1,8 @@
 CXX := g++
 NAME := a.out
 CXXFLAGS := -Wall -Werror -Wextra -std=c++98
-SRCS =	main.cpp
-		
+SRCS =	main.cpp\
+		Span.cpp
 OBJS = $(SRCS:.cpp=.o)
 
 # COLORS #
